chore: update headers

--- a/index.html
+++ b/index.html
@@ -1,13 +1,91 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="en-SG">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>SGCars Spotting - Singapore Car Spotting Gallery</title>
+  <meta name="title" content="SGCars Spotting - Singapore Car Spotting Gallery | Exotic & Luxury Cars" />
+  <meta name="description" content="A simple gallery to showcase sports cars in Singapore."" />
+  <meta name=" keywords"
+    content="Singapore cars, car spotting, exotic cars Singapore, supercar gallery, luxury cars, Singapore car photography, car enthusiasts, automotive photography" />
+  <meta name="author" content="SGCars Spotting" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="geo.region" content="SG" />
+  <meta name="geo.country" content="Singapore" />
+  <meta name="geo.placename" content="Singapore" />
+  <link rel="canonical" href="https://sgcars.app/" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://sgcars.app/" />
+  <meta property="og:title" content="SGCars Spotting - Singapore Car Spotting Gallery" />
+  <meta property="og:description" content="A simple gallery to showcase sports cars in Singapore." />
+  <meta property="og:image" content="https://www.sgcars.app/img/full/20250913_151742.webp" />
+  <meta property="og:image:width" content="1503" />
+  <meta property="og:image:height" content="1920" />
+  <meta property="og:site_name" content="SGCars Spotting" />
+  <meta property="og:locale" content="en_SG" />
+
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://sgcars.app/" />
+  <meta property="twitter:title" content="SGCars Spotting - Singapore Car Spotting Gallery" />
+  <meta property="twitter:description" content="A simple gallery to showcase sports cars in Singapore."" />
+  <meta property=" twitter:image" content="https://www.sgcars.app/img/full/20250913_151742.webp" />
+
+  <meta name="theme-color" content="#1a1a1a" />
+  <meta name="msapplication-TileColor" content="#1a1a1a" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <link rel="alternate" hreflang="en-sg" href="https://sgcars.app/" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ImageGallery",
+    "name": "SGCars Spotting",
+    "description": "A simple gallery to showcase sports cars in Singapore.",
+    "url": "https://sgcars.app",
+    "image": "https://www.sgcars.app/img/full/20250913_151742.webp",
+    "publisher": {
+      "@type": "Organization",
+      "name": "SGCars Spotting",
+      "url": "https://sgcars.app"
+    },
+    "mainEntity": {
+      "@type": "CollectionPage",
+      "name": "Car Spotting Gallery",
+      "description": "A simple gallery to showcase sports cars in Singapore.",
+      "about": {
+        "@type": "Thing",
+        "name": "Car Spotting in Singapore"
+      }
+    },
+    "locationCreated": {
+      "@type": "Place",
+      "name": "Singapore",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "SG"
+      }
+    },
+    "inLanguage": "en-SG",
+    "audience": {
+      "@type": "Audience",
+      "geographicArea": {
+        "@type": "Place",
+        "name": "Singapore"
+      }
+    }
+  }
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
