chore: simple UI fixes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <title>SGCars Spotting - Singapore Car Spotting Gallery</title>
   <meta name="title" content="SGCars Spotting - Singapore Car Spotting Gallery | Exotic & Luxury Cars" />
-  <meta name="description" content="A simple gallery to showcase sports cars in Singapore."" />
+  <meta name="description" content="A simple gallery to showcase sports cars in Singapore." />
   <meta name=" keywords"
     content="Singapore cars, car spotting, exotic cars Singapore, supercar gallery, luxury cars, Singapore car photography, car enthusiasts, automotive photography" />
   <meta name="author" content="SGCars Spotting" />
@@ -36,7 +36,7 @@
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://sgcars.app/" />
   <meta property="twitter:title" content="SGCars Spotting - Singapore Car Spotting Gallery" />
-  <meta property="twitter:description" content="A simple gallery to showcase sports cars in Singapore."" />
+  <meta property="twitter:description" content="A simple gallery to showcase sports cars in Singapore." />
   <meta property=" twitter:image" content="https://www.sgcars.app/img/full/20250913_151742.webp" />
 
   <meta name="theme-color" content="#1a1a1a" />
